[package]
name = "puan-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "puanrs"
crate-type = ["rlib", "cdylib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[dependencies]
generic-array = "0.14.6"
itertools = "0.10.4"

[build]
rustdocflags = [ "--html-in-header", "./src/docs-header.html" ]