[package]
name = "puan-rust"
version = "0.1.7"
edition = "2021"
description = "Puan package contain tools for defining logic relationships among linear inequalities and reduction algorithms."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "puanrs"
crate-type = ["rlib", "cdylib"]

[dependencies]
itertools = "0.10.4"

[build]
rustdocflags = [ "--html-in-header", "./src/docs-header.html" ]
